# ocl-polyhok

./: .gitignore  CMakeLists.txt  Makefile  README.md  mix.exs
benchmarks/: dot_product.ex  dot_product_double.ex  julia.ex  mm.ex  mm_2.ex  mm_polyhok.ex  nbodies.ex  nearest_neighbor.ex  raytracer.ex
benchmarks/cpu/: dot_product.exs  dot_product_nx.exs  mm.exs
benchmarks/cuda/: dot_product.cu  julia.cu  mm.cu  mm_2.cu  nearest_neighbor_double.cu
benchmarks/opencl/: dot_product.cpp  julia.cpp  mm.cpp  mm_2.cpp  nearest_neighbor.cpp  ocl_benchs.hpp  ocl_bmp.hpp  raytracer.cpp
benchmarks/ske_lib/: dot_product.ex
c_src/: Elixir.CAS_Poly.cl  bmp_nifs.cpp  cldef.hpp  gpu_nifs.cpp
c_src/bmp/: BMP.cpp  BMP.hpp
c_src/matrex_utils/: MatrexUtils.cpp  MatrexUtils.hpp
c_src/ocl_interface/: OCLInterface.cpp  OCLInterface.hpp
c_src_old/: gpu_nifs.cu
examples_paper/: dot_product.ex
lib/: ocl_poly_hok.ex  poly_hok.ex
lib/ocl_poly_hok/: JIT.ex  cuda_backend.ex  opencl_backend.ex  type_inference.ex
lib/poly_hok/: cuda_backend.ex  ske.ex
tests/: AlignedNxes.exs  ArraySum_test.exs  CPPBackendTest.exs  ContextTest.exs  SimpleTest.exs  TypeInferenceTests.exs  test_modules.ex
